# coauthors-graph

./: .gitignore  README.md  coauthors.html  config.json  main.py  pyproject.toml
.github/workflows/: pages.yml
automation/: heartbeat.json  update_heartbeat.py
src/coauthors_graph/: __init__.py  __main__.py  config.py  dblp.py  graph.py  http.py  merge.py  models.py  semantic_scholar.py
tests/: test_cli.py  test_config.py  test_dblp.py  test_graph.py  test_heartbeat.py  test_http.py  test_merge.py  test_semantic_scholar.py
tests/fixtures/: dblp_person.xml  semantic_scholar_pages.json
web/: index.html  package-lock.json  package.json
web/src/: graph-data.js  graph-layout.js  main.js  styles.css
web/test/: graph-data.test.js  graph-layout.test.js
